# active_camera_exposure_control

./: README.md  dependencies.yaml
auto_exposure_control/: CMakeLists.txt  package.xml
auto_exposure_control/include/auto_exposure_control/: auto_camera_settings.h  auto_camera_settings_factory.h  auto_exp_utils.h  auto_exposure_intensity.h  auto_exposure_percentile.h  auto_exposure_shim.h  auto_exposure_sweep.h  fixed_size_buffer.h  frame.h
auto_exposure_control/params/: ga_profile.txt
auto_exposure_control/scripts/: fit_ga_rate_curve.py  plot_ga_gain.py  plot_params_sweep.py
auto_exposure_control/src/: auto_camera_settings.cpp  auto_camera_settings_factory.cpp  auto_exp_utils.cpp  auto_exposure_intensity.cpp  auto_exposure_percentile.cpp  auto_exposure_shim.cpp  auto_exposure_sweep.cpp  frame.cpp
photometric_camera/: CMakeLists.txt  package.xml
photometric_camera/include/photometric_camera/: photometric_dataset.h  photometric_model.h
photometric_camera/src/: photometric_dataset.cpp  photometric_model.cpp
photometric_camera/tests/: test_photometric_model.cpp
